
* Setup program (gwsetup)
  - [21 Sep 00] Fixed bug: in recovery from an old version, if the
    destination data base already existed (created e.g. by a previous
    attempt), it could not overwrite the data base, even it pretended
    it was going to do it. Same problem (fixed also) for the creation
    of a data base from a GeneWeb source file.

* GeneWeb Service/CGI (gwd)
  - [21 Sep 00] When modifying a person, forbid now to let his/her
    first name or surname as just "?", because it can cause problems
    of linking these persons after a data base cleanup.
  - [18 Sep 00] In family updating, when creating an unknown person
    (i.e. having "?" as firstname or surname), does not set the "source"
    field any more for this person.
  - [18 Sep 00] Fixed bugs: 1/ while mergin persons, automatic merging
    sometimes used to loose the death date 2/ while merging families
    the comment of the 2nd family used to be ignored.
  - [15 Sep 00] In ascendants long display, added notes for siblings if
    any (they were missing).
  - [14 Sep 00] In update page, if the person's sex is unknown, the
    selection "add family" proposes now two case according to the sex.
  - [13 Sep 00] Fixed bug: problem of age at death in descendants page,
    the same bug than for personal pages fixed 16 Aug (version 3.07).
  - [05 Sep 00] Fixed bug: in ancestors surnames list, under Lynx
    (browser for alphanumeric terminals), sometimes displayed "incorrect
    request" when clicking on certain surnames.
  - [04 Sep 00] Fixed bug: in descendants with encoding, for children
    married several times, could sometimes display the father's name
    instead of a repetition of the child's name.
  - [01 Sep 00] Fixed short dates: "between 1935 and 1938" is displayed
    now "1935/1938" instead of "ca 1935/1938".
  - [30 Aug 00] Fixed bug: sometimes accepted two persons with the same
    key. E.g.: after having defined "Charles de Gaulle" and "Charles